--- a/src/Diamante/DeskBundle/Resources/config/automation.yml
+++ b/src/Diamante/DeskBundle/Resources/config/automation.yml
@@ -30,12 +30,11 @@ diamante_automation:
               source: "@diamante.autocomplete.user.service->getOroUsers"
             type: user
             conditions: ['eq', 'neq', 'changed', 'changed_from', 'changed_to']
-          reporter:
-            frontend_label: diamante.desk.ticket.reporter.label
-            frontend_options:
-              source: "@diamante.autocomplete.user.service->getUsers"
-            type: user
+          reporter_email:
+            frontend_label: diamante.desk.ticket.reporter_email.label
+            type: virtual
             conditions: ['eq', 'neq', 'contains', 'not_contains']
+            accessor: diamante_automation.ticket.property.processor::getReporterEmail
           source:
             frontend_label: diamante.desk.ticket.source.label
             frontend_options:
@@ -125,7 +124,7 @@ diamante_automation:
             frontend_label: diamante.desk.comment.author_email.label
             type: virtual
             conditions: ['contains', 'not_contains']
-            accessor:
+            accessor: accessor: diamante_automation.comment.property.processor::getAuthorEmail
 
     actions:
       move_to_branch:
