--- a/src/Diamante/DeskBundle/Resources/config/automation.yml
+++ b/src/Diamante/DeskBundle/Resources/config/automation.yml
@@ -49,58 +49,58 @@ diamante_automation:
             type: string
             conditions: ['contains', 'not_contains']
           sent_to:
-            frontend_label: diamante.desk.ticket.created_via_email
+            frontend_label: diamante.desk.ticket.created_via_email.label
             type: virtual
             conditions: ['eq', 'neq', 'contains', 'not_contains']
             accessor: diamante.ticket.email_processing_message_reference.repository::getEndpointByTicket
-          since_create:
-            frontend_label: diamante.desk.ticket.since_create
+          since_created:
+            frontend_label: diamante.desk.ticket.since_created.label
             type: virtual
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceCreate
-          since_update:
-            frontend_label: diamante.desk.ticket.since_update
+            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceCreated
+          since_updated:
+            frontend_label: diamante.desk.ticket.since_updated.label
             type: virtual
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceUpdate
-          since_open:
-            frontend_label: diamante.desk.ticket.since_open
+            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceUpdated
+          since_opened:
+            frontend_label: diamante.desk.ticket.since_opened.label
             type: virtual
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceOpen
+            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceOpened
           since_pending:
-            frontend_label: diamante.desk.ticket.since_pending
+            frontend_label: diamante.desk.ticket.since_pending.label
             type: virtual
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
             accessor: diamante_automation.ticket.property.time_interval_calculator::sincePending
           since_progress:
-            frontend_label: diamante.desk.ticket.since_progress
+            frontend_label: diamante.desk.ticket.since_progress.label
             type: virtual
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
             accessor: diamante_automation.ticket.property.time_interval_calculator::sinceProgress
-          since_close:
-            frontend_label: diamante.desk.ticket.since_close
+          since_closed:
+            frontend_label: diamante.desk.ticket.since_closed.label
             type: virtual
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceClose
-          since_reporter_update:
-            frontend_label: diamante.desk.ticket.since_requester_update
+            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceClosed
+          since_reporter_updated:
+            frontend_label: diamante.desk.ticket.since_reporter_updated.label
             type: virtual
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceReporter
-          since_assignee_update:
-            frontend_label: diamante.desk.ticket.since_assignee_update
+            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceReporterUpdated
+          since_assignee_updated:
+            frontend_label: diamante.desk.ticket.since_assignee_updated.label
             type: virtual
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceAssigneeUpdate
+            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceAssigneeUpdated
       comment:
         class: "Diamante\DeskBundle\Entity\Comment"
         frontend_label: diamante.desk.comment.entity_label
