--- a/src/Diamante/DeskBundle/Resources/config/automation.yml
+++ b/src/Diamante/DeskBundle/Resources/config/automation.yml
@@ -20,8 +20,7 @@ diamante_automation:
           branch:
             frontend_label: diamante.desk.ticket.branch.label
             frontend_options:
-              source: "@diamante.branch.repository->getAll"
-              property_list: ['id', 'name']
+              source: "@diamante.autocomplete.branch.service->getBranches"
             type: branch
             conditions: ['eq', 'neq', 'contains']
           assignee:
