--- a/src/Diamante/DeskBundle/Resources/config/automation.yml
+++ b/src/Diamante/DeskBundle/Resources/config/automation.yml
@@ -52,54 +52,26 @@ diamante_automation:
             type: virtual
             conditions: ['eq', 'neq', 'contains', 'not_contains']
             accessor: diamante.ticket.email_processing_message_reference.repository::getEndpointByTicket
-          since_created:
+          created_at:
             frontend_label: diamante.desk.ticket.since_created.label
-            type: virtual
+            type: datetime
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceCreated
-          since_updated:
+          updated_at:
             frontend_label: diamante.desk.ticket.since_updated.label
-            type: virtual
+            type: datetime
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceUpdated
-          since_opened:
-            frontend_label: diamante.desk.ticket.since_opened.label
-            type: virtual
+          status_updated_since:
+            frontend_label: diamante.desk.ticket.since_status_updated.label
+            type: datetime
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceOpened
-          since_pending:
-            frontend_label: diamante.desk.ticket.since_pending.label
-            type: virtual
-            conditions: ['gt', 'gte', 'lt', 'lte']
-            rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sincePending
-          since_progress:
-            frontend_label: diamante.desk.ticket.since_progress.label
-            type: virtual
-            conditions: ['gt', 'gte', 'lt', 'lte']
-            rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceProgress
-          since_closed:
-            frontend_label: diamante.desk.ticket.since_closed.label
-            type: virtual
-            conditions: ['gt', 'gte', 'lt', 'lte']
-            rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceClosed
-          since_reporter_updated:
-            frontend_label: diamante.desk.ticket.since_reporter_updated.label
-            type: virtual
-            conditions: ['gt', 'gte', 'lt', 'lte']
-            rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceReporterUpdated
-          since_assignee_updated:
+          assigned_since:
             frontend_label: diamante.desk.ticket.since_assignee_updated.label
-            type: virtual
+            type: datetime
             conditions: ['gt', 'gte', 'lt', 'lte']
             rules: ['business']
-            accessor: diamante_automation.ticket.property.time_interval_calculator::sinceAssigneeUpdated
       comment:
         class: "Diamante\DeskBundle\Entity\Comment"
         frontend_label: diamante.desk.comment.entity_label
