--- a/src/Diamante/DeskBundle/Resources/config/automation.yml
+++ b/src/Diamante/DeskBundle/Resources/config/automation.yml
@@ -52,6 +52,7 @@ diamante_automation:
             type: virtual
             conditions: ['eq', 'neq', 'contains', 'not_contains']
             accessor: diamante.ticket.email_processing_message_reference.repository::getEndpointByTicket
+            rules: ['workflow']
           created_at:
             frontend_label: diamante.desk.ticket.since_created.label
             type: datetime
@@ -102,11 +103,3 @@ diamante_automation:
         id: @diamante.desk.automation.action.move_to_branch
         frontend_label: diamante.desk.automation.action.move_to_branch
         data_types: ['virtual']
-
-parameters:
-  diamante.automation.action.move_to_branch.class: Diamante\DeskBundle\Automation\Action\MoveToBranchAction
-
-services:
-  diamante.automation.action.move_to_branch:
-    class: %diamante.automation.action.move_to_branch.class%
-    arguments: @doctrine
