DIAM-1487 Problem with displaying Admin avatar on the back-end

--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -24,6 +24,7 @@ whitelist:
     - 'oro_dataaudit_index'
     - 'oro_dataaudit_history'
     - 'oro_resize_attachment'
+    - 'oro_filtered_attachment'
 
     #OroUserBundle
     - 'oro_activity_list_api_get_list'
