--- a/src/Diamante/DistributionBundle/Resources/config/navigation.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/navigation.yml
@@ -41,19 +41,19 @@ oro_menu_config:
 
         diamante_workflow_list:
             label: 'diamante.automation.rule.workflow.entity_label'
-            route: diamante_automation_list
+            route: diamante_workflow_list
             routeParameters:
                 type: 'workflow'
             extras:
-                routes: ['diamante_automation_*']
+                routes: ['diamante_workflow_*']
 
         diamante_business_list:
             label: 'diamante.automation.rule.business.entity_label'
-            route: diamante_automation_list
+            route: diamante_business_list
             routeParameters:
                 type: 'business'
             extras:
-                routes: ['diamante_automation_*']
+                routes: ['diamante_business_*']
 
         #reports
         diamante_report_tickets_by_priority:
@@ -174,6 +174,16 @@ oro_titles:
     diamante_ticket_create: 'Create Ticket'
     diamante_ticket_update: '%%ticket.subject%% - Edit'
     diamante_ticket_create_attach: 'Add Attachment'
+
+    diamante_workflow_list: 'Workflow Rules'
+    diamante_workflow_view: '%%rule.name%%'
+    diamante_workflow_create: 'Create Workflow Rule'
+    diamante_workflow_update: '%%rule.name%% - Edit'
+
+    diamante_business_list: 'Business Rules'
+    diamante_business_view: '%%rule.name%%'
+    diamante_business_create: 'Create Business Rule'
+    diamante_business_update: '%%rule.name%% - Edit'
 
     diamante_report_view: '%%report.label%%'
 
