--- a/src/Diamante/AutomationBundle/Resources/config/datagrid.yml
+++ b/src/Diamante/AutomationBundle/Resources/config/datagrid.yml
@@ -34,6 +34,8 @@ datagrid:
       columns:
         name:
           data_name: w.name
+        active:
+          data_name: w.active
 
     filters:
       columns:
@@ -132,6 +134,8 @@ datagrid:
       columns:
         name:
           data_name: b.name
+        active:
+          data_name: b.active
 
     filters:
       columns:
