DIAM-1600 add notify list

--- a/src/Diamante/AutomationBundle/Resources/config/automation.yml
+++ b/src/Diamante/AutomationBundle/Resources/config/automation.yml
@@ -66,4 +66,6 @@ diamante_automation:
     notify_by_email:
       id: @diamante_automation.action.notify_by_email
       frontend_label: diamante.automation.action.notify_by_email
+      frontend_options:
+        source: "@diamante.autocomplete.user.service->getNotifyActionList"
       data_types: ['*']
