DIAM-1476 fix user export

--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -26,6 +26,7 @@ whitelist:
     - 'oro_resize_attachment'
     - 'oro_filtered_attachment'
     - 'oro_importexport_export_instant'
+    - 'oro_importexport_export_download'
 
     #OroUserBundle
     - 'oro_activity_list_api_get_list'
