add branch list for move to branch action

--- a/src/Diamante/DeskBundle/Resources/config/automation.yml
+++ b/src/Diamante/DeskBundle/Resources/config/automation.yml
@@ -104,4 +104,6 @@ diamante_automation:
       move_to_branch:
         id: @diamante.desk.automation.action.move_to_branch
         frontend_label: diamante.desk.automation.action.move_to_branch
+        frontend_options:
+          source: "@diamante.autocomplete.branch.service->getBranches"
         data_types: ['virtual']
