--- a/src/Diamante/AutomationBundle/Resources/config/requirejs.yml
+++ b/src/Diamante/AutomationBundle/Resources/config/requirejs.yml
@@ -1,5 +1,6 @@
 config:
   paths:
     'diamanteautomation/js/app/views/automation-view': 'bundles/diamanteautomation/js/app/views/automation-view.js'
+    'diamanteautomation/js/datagrid/action/abstract_rule-action': 'bundles/diamanteautomation/js/datagrid/action/abstract_rule-action.js'
     'oro/datagrid/action/activate_rule-action': 'bundles/diamanteautomation/js/datagrid/action/activate_rule-action.js'
     'oro/datagrid/action/deactivate_rule-action': 'bundles/diamanteautomation/js/datagrid/action/deactivate_rule-action.js'
