--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -37,6 +37,7 @@ whitelist:
 
     #Dashboard
     - 'oro_api_post_dashboard_widget_add_widget'
+    - 'oro_api_put_dashboard_widget'
     - 'oro_api_put_dashboard_widget_positions'
     - 'oro_api_delete_dashboard_widget'
     - 'oro_api_delete_dashboard'
