--- a/src/Diamante/AutomationBundle/Resources/config/automation.yml
+++ b/src/Diamante/AutomationBundle/Resources/config/automation.yml
@@ -20,12 +20,12 @@ diamante_automation:
     lte:
       class: 'Diamante\AutomationBundle\Rule\Condition\Expression\Lte'
       frontend_label: diamante.automation.condition.lte
-    contains:
-      class: 'Diamante\AutomationBundle\Rule\Condition\Expression\Contains'
+    like:
+      class: 'Diamante\AutomationBundle\Rule\Condition\Expression\Like'
       frontend_label: diamante.automation.condition.contains
       type: 'string'
-    not_contains:
-      class: 'Diamante\AutomationBundle\Rule\Condition\Expression\NotContains'
+    not_like:
+      class: 'Diamante\AutomationBundle\Rule\Condition\Expression\NotLike'
       frontend_label: diamante.automation.condition.not_contains
       type: 'string'
     created:
