DIAM-1766 hide change* conditions in busiless rule

--- a/src/Diamante/AutomationBundle/Resources/config/automation.yml
+++ b/src/Diamante/AutomationBundle/Resources/config/automation.yml
@@ -44,12 +44,15 @@ diamante_automation:
       class: 'Diamante\AutomationBundle\Rule\Condition\Expression\Changed'
       frontend_label: diamante.automation.condition.changed
       type: 'bool'
+      rules: ['workflow']
     changed_from:
       class: 'Diamante\AutomationBundle\Rule\Condition\Expression\ChangedFrom'
       frontend_label: diamante.automation.condition.changed_from
+      rules: ['workflow']
     changed_to:
       class: 'Diamante\AutomationBundle\Rule\Condition\Expression\ChangedTo'
       frontend_label: diamante.automation.condition.changed_to
+      rules: ['workflow']
     'true':
       class: 'Diamante\AutomationBundle\Rule\Condition\Expression\True'
       frontend_label: diamante.automation.condition.true
