--- a/src/Diamante/DeskBundle/Resources/config/reports.yml
+++ b/src/Diamante/DeskBundle/Resources/config/reports.yml
@@ -30,10 +30,10 @@ reports:
             x-axis: day
             y-axis:
               items:
-                  - 0-1
-                  - 1-8
-                  - 8-24
-                  - more 24
+                  - 0-1 hours
+                  - 1-8 hours
+                  - 8-24 hours
+                  - more 24 hours
         source:
             type: repository
             repository: "Diamante\\DeskBundle\\Infrastructure\\Persistence\\DoctrineReportRepository::getTimeOfResponseReportData"
@@ -56,8 +56,10 @@ reports:
             y-axis: data
             group: source
         source:
-            type: dql
-            dql: "select date(t.createdAt) as day, t.source as source, count(t.source) as data from Diamante\\DeskBundle\\Entity\\Ticket t GROUP BY t.source, day"
+            type: repository
+            repository: "Diamante\\DeskBundle\\Infrastructure\\Persistence\\DoctrineReportRepository::getTicketsByChannelsReportData"
+#            type: dql
+#            dql: "select date(t.createdAt) as day, t.source as source, count(t.source) as data from Diamante\\DeskBundle\\Entity\\Ticket t GROUP BY t.source, day"
 
     tickets_by_channels_widget:
         label: "Tickets by Channels"
